labs/ingress/example-ingress.yaml
# More about TLS here:
# https://docs.openshift.com/container-platform/4.13/networking/routes/route-configuration.html#nw-ingress-creating-a-route-via-an-ingress_route-configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    route.openshift.io/termination: edge 
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
